--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,21 @@
 *{
-    padding: 0%;
     margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
+}
+h1{
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 40px;
+}
+.logo{
+    vertical-align: middle;
+}
+body{
+    background-color:#f6f8f9 ;
+}
+header{
+    background-color: white;
+    height: 70px;
+    padding: 10px;
 }
