--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,11 @@ header{
 }
 .webapp{
     width: 800px;
-    margin: 40px auto;
+    margin: auto;
+    margin-top: 40px;
     background-color: white;
+    border-radius: 7px;
+    padding: 10px;
 }
 .add{
     color: white;
@@ -37,4 +40,32 @@ header{
     border: solid #c8ced3;
     border-radius: 7px;
     padding: 7px;
+}
+#zeromargin{
+    margin-top: 2px;
+}
+.bold{
+    font-weight: bolder;
+    font-size: larger;
+}
+.spunta{
+    color: green;
+    border: solid green;
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    padding: 5px;
+    padding-left: 5px;
+}
+h2{
+    display: inline-block;
+    font-weight: 400;
+    font-size: medium;
+}
+.blu{
+    background-color: #45abea;
+    color: white;
+    border-radius: 12px;
+    padding: 7px;
+    font-size: 10px;
 }
