--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,10 @@ header{
 .bold{
     font-weight: bolder;
     font-size: larger;
+    display: inline-block;
 }
 .spunta{
+    font-size: 15px;
     color: green;
     border: solid green;
     border-radius: 50%;
@@ -61,9 +63,46 @@ h2{
     display: inline-block;
     font-weight: 400;
     font-size: medium;
+    margin: 10px;
 }
 .blu{
     background-color: #45abea;
+    color: white;
+    border-radius: 12px;
+    padding: 7px;
+    font-size: 10px;
+}
+.spazioup{
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.viola{
+    background-color: #9c72e4;
+    color: white;
+    border-radius: 12px;
+    padding: 7px;
+    font-size: 10px;
+}
+.cross{
+    font-size: 15px;
+    color: red;
+    border: solid red;
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    padding: 5px;
+    padding-left: 5px;
+}
+.verde{
+    background-color: #64c0a9;
+    color: white;
+    border-radius: 12px;
+    padding: 7px;
+    font-size: 10px;
+}
+.giallo{
+    background-color: #f29e33;
     color: white;
     border-radius: 12px;
     padding: 7px;
