--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,14 @@ h2{
     font-size: medium;
     margin: 10px;
 }
-.blu{
-    background-color: #45abea;
+.tag{
     color: white;
     border-radius: 12px;
     padding: 7px;
     font-size: 10px;
+}
+.blu{
+    background-color: #45abea;
 }
 .spazioup{
     margin-top: 20px;
@@ -79,10 +81,6 @@ h2{
 }
 .viola{
     background-color: #9c72e4;
-    color: white;
-    border-radius: 12px;
-    padding: 7px;
-    font-size: 10px;
 }
 .cross{
     font-size: 15px;
@@ -96,15 +94,13 @@ h2{
 }
 .verde{
     background-color: #64c0a9;
-    color: white;
-    border-radius: 12px;
-    padding: 7px;
-    font-size: 10px;
 }
 .giallo{
     background-color: #f29e33;
-    color: white;
-    border-radius: 12px;
-    padding: 7px;
-    font-size: 10px;
+}
+.violetto{
+    background-color: #d863a1;
+}
+.lightgreen{
+    background-color: #b0c926;
 }
